[gd_scene load_steps=7 format=3 uid="uid://erjjtd0lijub"]

[ext_resource type="Script" path="res://scripts/PlayerBoard.gd" id="1_pjiff"]
[ext_resource type="PackedScene" uid="uid://ctdxwxyed58yt" path="res://scenes/Cell.tscn" id="2_jjymn"]
[ext_resource type="PackedScene" uid="uid://bav8flav72ovb" path="res://scenes/TileRack.tscn" id="3_5ua3k"]
[ext_resource type="PackedScene" uid="uid://mt5xu4fsx1l2" path="res://scenes/DropLogic.tscn" id="3_fs1h7"]

[sub_resource type="SystemFont" id="SystemFont_q3brd"]
font_names = PackedStringArray("Andale Mono")

[sub_resource type="Theme" id="Theme_x22qi"]
default_font = SubResource("SystemFont_q3brd")
default_font_size = 30

[node name="PlayerBoard" type="Node2D"]
z_index = -1
script = ExtResource("1_pjiff")
cell_scene = ExtResource("2_jjymn")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_left = 162.0
offset_right = 991.0
offset_bottom = 648.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
handle_input_locally = false
physics_object_picking = true
physics_object_picking_sort = true
size = Vector2i(400, 400)
render_target_update_mode = 4

[node name="ZoomContainer" type="Node2D" parent="SubViewportContainer/SubViewport"]

[node name="GridCells" type="Node2D" parent="SubViewportContainer/SubViewport/ZoomContainer"]

[node name="sanity" type="Sprite2D" parent="SubViewportContainer/SubViewport/ZoomContainer"]

[node name="ColorRect" type="ColorRect" parent="SubViewportContainer/SubViewport/ZoomContainer/sanity"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.854576, 0, 0.22683, 1)

[node name="TileRack" parent="SubViewportContainer/SubViewport" instance=ExtResource("3_5ua3k")]

[node name="DropLogic" parent="." instance=ExtResource("3_fs1h7")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 987.0
offset_top = 38.0
offset_right = 1148.0
offset_bottom = 144.0
theme = SubResource("Theme_x22qi")

[node name="Peel" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "PEEL"

[node name="Swap" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "SWAP"

[connection signal="pressed" from="VBoxContainer/Swap" to="." method="_on_swap_pressed"]
